# canny_wedge_detector

./: Cargo.toml  LICENSE_MIT  README.md  index.html
assets/: send_image.js
src/: canny_edge.rs  conv_2d.rs  lib.rs  main.rs  shader.wgsl
